Random bits and pieces around handling executable bits.